# trading-bot

./: .env.example  .gitignore  README.md  mobile_app_design_prompt.txt  pyproject.toml
.github/workflows/: android-webview.yml  android.yml
android/: .gitignore  gradlew  gradlew.bat  settings.gradle.kts
android-webview/: .gitignore  build.gradle.kts  settings.gradle.kts
android-webview/app/: build.gradle.kts
android-webview/app/src/main/: AndroidManifest.xml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
src/bot/: config.py  main.py
src/bot/api/: app.py  auth.py  models.py  server.py  snapshot.py  state.py
src/bot/api/routers/: control.py  dashboard.py  logs.py  news.py  positions.py  ws.py  (+3 more)
src/bot/brain/: claude.py  prompts.py  schema.py
src/bot/exchange/: client.py  orders.py
src/bot/executor/: engine.py
src/bot/indicators/: features.py  ta.py
src/bot/news/: aggregator.py  cryptopanic.py  newsapi.py  rss.py
src/bot/notify/: telegram.py
src/bot/risk/: guards.py  sizing.py
src/bot/screener/: filters.py  universe.py
src/bot/storage/: db.py  models.py
src/bot/utils/: logger.py  retry.py
tests/: test_brain_schema.py  test_indicators.py  test_risk_guards.py  test_screener.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  auth.ts  index.css  types.ts
web/src/components/: BottomNav.tsx  TopBar.tsx  ui.tsx
web/src/screens/: Control.tsx  Dashboard.tsx  Pair.tsx  Positions.tsx  Settings.tsx
(+28 files in other folders)
