[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Crypto futures trading bot with Claude Opus 4.7 brain via gh copilot CLI"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.3.0",
  "pybit>=5.7.0",
  "pandas>=2.2",
  "pandas-ta",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "apscheduler>=3.10",
  "loguru>=0.7",
  "feedparser>=6.0",
  "httpx>=0.27",
  "python-telegram-bot>=21.0",
  "tenacity>=8.3",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
trading-bot = "bot.main:main"
trading-bot-api = "bot.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
